kubernetes/apps/privatebin/privatebin.yaml
apiVersion: v1
kind: Service
metadata:
  name: privatebin
  labels:
    app: privatebin
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: web
  selector:
    app: privatebin
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: privatebin-deployment
  labels:
    app: privatebin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: privatebin
  template:
    metadata:
      labels:
        app: privatebin
    spec:
      securityContext:
        # nobody user
        runAsUser: 65534
        # www-data user
        runAsGroup: 33
        fsGroup: 33
      containers:
      - name: privatebin
        image: privatebin/fs:stable
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 250m
            memory: 128Mi
          requests:
            cpu: 1m
            memory: 32Mi
        securityContext:
          readOnlyRootFilesystem: true
          privileged: false
          allowPrivilegeEscalation: false
        volumeMounts:
        - mountPath: /srv/data
          name: persistent-storage-pbin
          readOnly: False
      volumes:
        - name: persistent-storage-pbin
          persistentVolumeClaim:
            claimName: pv-claim-pbin
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: privatebin-ingress
    app.kubernetes.io/part-of: privatebin
  name: privatebin-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: pbin.example.com
      http: &backend
        paths:
          - backend:
              service:
                name: privatebin
                port:
                  name: web
            path: /
            pathType: Prefix
